--- a/test/style.css
+++ b/test/style.css
@@ -1,3 +1,50 @@
+* {
+  font-family: inherit;
+  line-height: inherit;
+  color: inherit;
+}
+
+html{
+  font-family: sans-serif;
+  font-size: 100%;
+}
+
+input, textarea, keygen, select, button{
+  font-size: 100%;
+}
+
+figure{
+  display: inline-block;
+}
+
+figcaption{
+  text-align: center;
+}
+
+.actions{
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.actions li{
+  flex-grow: 1;
+  margin: 5px
+}
+
+.actions button{
+  display: block;
+  width: 100%;
+  height: 2.125rem;
+  border: 1px solid;
+  background: none;
+}
+
+fieldset > *{
+  display: block;
+}
 .modal{
   display: none;
 }
